--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,7 @@ jobs:
           deno-version: "~1.15"
       - run: |
           deno --version
-          
-          ./build.sh
 
-          ./test/all.sh ./bin/pom
+          deno install $(deno run ./src/flags.ts) -f --name pom ./src/main.ts
+
+          ./test/all.sh pom
